feat: add basic layout with current city and current weather display

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,7 +3,11 @@
         "baseUrl": "./src",
         "paths": {
             "@components/*" : ["components/*"],
-            "@interfaces/*": ["interfaces/*"]
+            "@interfaces": ["interfaces/*"],
+            "@constants/*": ["constants/*"],
+            "@store/*": ["store/*"],
+            "@utils/*": ["utils/*"],
+            "@hooks/*": ["hooks/*"],
         }
     }
 }
