--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,6 +49,7 @@
         "react/react-in-jsx-scope": "off",
         "spaced-comment": ["error", "always"],
         "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
+        "no-param-reassign": [2, { "props": false }],
         "import/prefer-default-export": "off"
     }
 }
