--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,6 +50,7 @@
         "spaced-comment": ["error", "always"],
         "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
         "no-param-reassign": [2, { "props": false }],
+        "import/no-cycle": [2, { "maxDepth": 1 }],
         "import/prefer-default-export": "off"
     }
 }
