--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,11 +3,12 @@
         "baseUrl": "./src",
         "paths": {
             "@components/*" : ["components/*"],
-            "@interfaces": ["interfaces/*"],
+            "@interfaces/*": ["interfaces/*"],
             "@constants/*": ["constants/*"],
             "@store/*": ["store/*"],
             "@utils/*": ["utils/*"],
             "@hooks/*": ["hooks/*"],
+            "@sagas/*": ["sagas/*"]
         }
     }
 }
