--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.3",
+    "react-toastify": "^9.0.7",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
