--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-spinners": "^0.13.3",
     "react-toastify": "^9.0.7",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
